--- a/pages/choiсe/style.css
+++ b/pages/choiсe/style.css
@@ -10,7 +10,7 @@
     padding-bottom: 70px;
 }
 .title{
-    font-size: 23px;
+    font-size: 25px;
     color: #4263EB;
     text-align: center;
     margin-top: 20px;
@@ -60,6 +60,10 @@
 .amount__number{
     font-size: 46px;
     color: #000000;
+    width: 200px;
+    text-align: center;
+    background: #F5F7FE;
+    border: none;
 }
 
 
@@ -142,8 +146,9 @@
     color: #FFFFFF;
 }
 .btn:hover{
-    background: #6a82e2;
-    color: #FFFFFF;
+    background-color: white;
+    color: black;
+    border-color: #4263EB;
 }
 
 .take__number_upper{
