--- a/pages/instruction/style.css
+++ b/pages/instruction/style.css
@@ -137,8 +137,9 @@
     margin-top: 37px;
 }
 .btn:hover{
-    background: #6a82e2;
-    color: white;
+    background-color: white;
+    color: black;
+    border-color: #4263EB;
 }
 .footer__text{
     font-weight: 400;
