--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@
     padding: 20px;
 
 }
-
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 label{
     display: block;
     width:  100%;
@@ -54,11 +59,15 @@ label{
     margin-left: -110px;
 }
 input{
-    border-radius: 8px !important;
+    
+    border-top-width: 2px !important;
+    border-bottom-width: 2px !important;
+    border-left-width: 2px !important;
+    border-radius: 11px !important;
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
     z-index: 0 !important;
-    border-color: #6c757d !important;
+    border-color: #4263EB !important;
 }
 input:focus, input:active{
     outline: none !important;
@@ -125,12 +134,12 @@ input:focus, input:active{
     width: 120px !important;
     height: 50px;
     border: none;
-    border-top: 1px solid ;
-    border-right: 1px solid ;
-    border-bottom: 1px solid ;
-    border-top-right-radius: 8px !important;
-    border-bottom-right-radius: 8px !important;
-    border-color: #6c757d !important;
+    border-top: 2px solid ;
+    border-right: 2px solid ;
+    border-bottom: 2px solid ;
+    border-top-right-radius: 11px !important;
+    border-bottom-right-radius: 11px !important;
+    border-color: #4263EB !important;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -144,7 +153,7 @@ input:focus, input:active{
 .dropdown__button_third, .dropdown__button_fourth, .dropdown__button_fifth{
     width: 100% !important;
     color: black;
-    border-radius: 8px !important;
+    border-radius: 11px !important;
     height: 50px;
     z-index: 0 !important;
     text-align: start;
@@ -184,23 +193,24 @@ input:focus, input:active{
 #button__submit{
     width: 100%;
     height: 100%;
-    background-color: #4962E3;
+    background-color: #4263EB;
     color: white;
-    border-radius: 10px;
+    border-radius: 11px;
+    border-width: 2px;
 }
 #button__submit:hover{
     background-color: white;
     color: black;
-    border-color: #4962E3;
+    border-color: #4263EB;
 }
 .button__link{
-    width: 300px !important;
+    width: 310px !important;
     height: 50px;
     margin: 0 auto;
     margin-top: 20px;
 }
 .form__footer a{
-    color: #4962E3;
+    color: #4263EB;
 }
 .form__footer a:hover{
     color: black;
@@ -251,7 +261,7 @@ input:focus, input:active{
         border-top-right-radius: 20px;
     }
     body{
-        background-color: #4962E3;
+        background-color: #4263EB;
     }
 }
 
